# mechanical_press

./: .gitignore  BLOOM_PACKAGING.md  BLOOM_TRANSITION.md  PACKAGING_FOR_DISTRIBUTION.md  README.md  SERVICE_DEPLOYMENT.md  default_params.yaml  mechanical_press.repos  mechanical_press_example.yaml  package.xml  setup.cfg  setup.py
config/: default.yaml
config/examples/: development.yaml  factory_line1_press1.yaml  maintenance_press.yaml
launch/: mechanical_press.launch.py  mechanical_press_launch.py  press_node_launch.py
mechanical_press/: CMakeLists.txt  mechanical_press.py  package.xml  press_node.py
mechanical_press_bringup/: CMakeLists.txt  README.md  package.xml  setup.py
mechanical_press_bringup/config/: default_params.yaml  example_params.yaml
mechanical_press_bringup/launch/: mechanical_press.launch.py
mechanical_press_core/: package.xml  setup.cfg  setup.py
resource/: mechanical_press
scripts/: create-instance.sh  create-service.sh  dev-snapshot.sh  package.sh  update-instance.sh
