[develop]
script_dir=$base/lib/mechanical_press
[install]
install_scripts=$base/lib/mechanical_press

[metadata]
name = mechanical_press
version = 0.1.0
description = Mechanical press application node for ROS 2
author = Your Name
author_email = your.email@example.com
license = Apache-2.0
keywords = ros2

[options]
packages = find:
install_requires =
    setuptools

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    press_node = mechanical_press.press_node:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/mechanical_press
share/mechanical_press =
    package.xml
    mechanical_press/default_params.yaml
share/mechanical_press/launch =
    launch/*.py
