<?xml version="1.0"?>
<package format="3">
  <name>mechanical_press</name>
  <version>0.1.0</version>
  <description>Meta-package for mechanical press system - includes core and bringup packages</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>mechanical_press_core</exec_depend>
  <exec_depend>mechanical_press_bringup</exec_depend>

  <export>
    <metapackage />
  </export>
</package>